--- a/src/css/SearchableObjectType.css
+++ b/src/css/SearchableObjectType.css
@@ -2,17 +2,23 @@
     #SectionIndex{
         font-size: 10px;
         width: 10%;
-        /* margin-right: 5%; */
-        /* margin-top: 5%; */
+        height: 100vh;
+        /* margin-right: 5%;
+        margin-top: 5%; */
     }
     #SectionList{
-        width: 75vw;
-        margin-left: 10%;
+        width: 80vw;
+        /* margin-left: 10%; */
     }
     #searchableObjectType {
-        position: relative;
-        top: -20vh;
+        position: fixed;
+        z-index: 1600;
+        top: 18vh;
         right: -1%;
+    }
+
+    .searchResultListGroup {
+        margin-right: 4px;
     }
 }
 
@@ -71,9 +77,9 @@
         width: 30vw;
     }
     #searchableObjectType {
-        position: relative;
-        top: -15vh;
-        right: -1%;
+        position: absolute;
+        top: 10vh;
+        right: -1.5%;
     }
 
 }
